<resources>
    <string name="app_name">Kelly Weather App</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="appname">Kelly\'s Weather App</string>
    <string name="note_hint">write notes here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="day">Day</string>
    <string name="date">date</string>
    <string name="condition">condition</string>
    <string name="name_of_user">name of user</string>
    <string name="sign_up">Sign up</string>
    <string name="login_here">Login here</string>
    <string name="general">General</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="planner">Planner</string>
    <string name="actions">Actions</string>
    <string name="exit_sign_out">Exit/Sign Out</string>
    <string name="details">Details</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="uv_index">UV Index</string>
    <string name="save">save</string>
    <string name="day_date_cond">Day + date + cond</string>
    <string name="no_notes">no notes</string>
    <string name="city_country">city, Country</string>
    <string name="latitude_longitude">latitude, longitude</string>
</resources>