<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/itemHome"
                android:icon="@drawable/ic_home"
                android:title="@string/home" />
            <item
                android:id="@+id/itemProfile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/itemPlanner"
                android:icon="@drawable/ic_planner"
                android:title="@string/planner" />
        </menu>
    </item>
    <item android:title="@string/actions">
        <menu>
            <item
                android:id="@+id/itemExit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit_sign_out" />
        </menu>
    </item>

</menu>