<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:gravity="center"
    android:padding="6dp"
    android:background="@color/loginBackground"
    android:orientation="vertical"
    style="@style/AppTheme.NoActionBar">
    <ImageView
        android:src="@drawable/appicon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appname"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:padding="4dp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/edittext_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:autofillHints="@string/email" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/edittext_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:autofillHints="@string/password" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginTop="6dp"
        />
    <TextView
        android:layout_marginTop="4dp"
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_here"
        android:textColor="@android:color/white"/>



</LinearLayout>